Added resume pdf link to html.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <p class="space"><a href="https://github.com/lindybriggs">Github</a></p>
                 <p class="space"><a href="https://www.linkedin.com/in/lindy-briggs-5b3558179/">LinkedIn</a></p>
                 <p class="space"><a href="mailto: briggs.lindy@yahoo.com">Email</a></p>
+                <p class="space"><a href="https://drive.google.com/file/d/1zVbZgE_u2-m0mp3WPqdGp-DqnBYikQvx/view?usp=sharing">Resume</a></p>
             </section>
         </section>
     </main>
