--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <h2 id="contactMe" class="titles">Contact Me</h2>
             <section class="content">
                 <p class="space"><a href="https://github.com/lindybriggs">Github</a></p>
-                <p class="space"><a href="https://www.linkedin.com/in/lindy-briggs-5b3558179/">LinkedIn</a></p>
+                <p class="space"><a href="https://www.linkedin.com/in/lindy-briggs">LinkedIn</a></p>
                 <p class="space"><a href="mailto: briggs.lindy@yahoo.com">Email</a></p>
-                <p class="space"><a href="https://drive.google.com/file/d/1zVbZgE_u2-m0mp3WPqdGp-DqnBYikQvx/view?usp=sharing">Resume</a></p>
+                <p class="space"><a href="https://drive.google.com/file/d/1b-LsVq1alS6q4p9Jo7JQcQMyMVoedzOl/view?usp=sharing">Resume</a></p>
             </section>
         </section>
     </main>
