--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="card">
             <h2 id="aboutMe" class="titles">About Me</h2>
             <p class="content">
-                Hello, nice to meet you. My name's Lindy Briggs and I am learning to code through a full-stack web development bootcamp. We've learned HTML and CSS thus far, and I am really enjoying both. Looking forward to expanding my knowledge and skills in this field. Thanks for stopping by, and please check out some of my work in the section below!
+                Welcome to my portfolio! My name's Lindy Briggs and I am learning to code through a full-stack web development bootcamp. We've learned so much in the past few months, including front and back end, and have combined the two recently to develop full stack applications. Thanks for stopping by, and please check out some of my work in the section below!
             </p>
         </section>
 
@@ -42,12 +42,12 @@
             <h2 id="myWork" class="titles">My Work</h2>
             <section class="content">
                 <div class="try">
-                    <a href="https://lindybriggs.github.io/Project-1/" target="_blank"><img class="bigWork" src="./Images/project1.png" alt="first group project"></a> 
-                    <h3>Project 1: <a href="https://github.com/lindybriggs/Project-1">GitHub</a> </h3>
+                    <a href="https://therecipeforsuccess.herokuapp.com/" target="_blank"><img class="bigWork" src="./Images/recipe4success.png" alt="full stack group project - the recipe for success"></a> 
+                    <h3>The Recipe for Success: <a href="https://github.com/mcjbyday/therecipeforsuccess">GitHub</a> </h3>
                 </div>
                 <div class="other1">
-                    <a href="https://lindybriggs.github.io/hw-6-weather/" target="_blank"><img class="otherWork1" src="./Images/weather.png" alt="weather API fetching homework"></a>
-                    <h3>Weather Dashboard: <a href="https://github.com/lindybriggs/hw-6-weather">GitHub</a> </h3>
+                    <a href="https://limitless-wave-23866.herokuapp.com/" target="_blank"><img class="otherWork1" src="./Images/noteTaker.png" alt="note taker app"></a>
+                    <h3>Note Taker: <a href="https://github.com/lindybriggs/Note-Taker">GitHub</a> </h3>
                 </div>
                 <div class="other2">
                     <a href="https://lindybriggs.github.io/hw5-scheduler/" target="_blank"><img class="otherWork2" src="./Images/scheduler.png" alt="another photo of my work"></a>
